Phasee 23.4, 23.5, 24 增加room controller service
